# funkus_dialogue

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
assets/dialogues/: example.dialogue.json
crates/funkus_dialogue_core/: Cargo.toml
crates/funkus_dialogue_core/src/: debug.rs  events.rs  lib.rs
crates/funkus_dialogue_core/src/asset/: dialogue_asset.rs  mod.rs
crates/funkus_dialogue_core/src/graph/: dialogue_graph.rs  node.rs
crates/funkus_dialogue_core/src/graph/nodes/: mod.rs
crates/funkus_dialogue_core/src/runtime/: mod.rs  systems.rs
crates/funkus_dialogue_editor/: Cargo.toml
crates/funkus_dialogue_editor/src/: editor.rs  lib.rs  node_wrapper.rs  viewer.rs
crates/funkus_dialogue_ui/: Cargo.toml
crates/funkus_dialogue_ui/src/: components.rs  lib.rs  systems.rs
docs/: README.md
examples/: dialogue_editor.rs  simple_dialogue.rs
src/: debug.rs  error.rs  events.rs  lib.rs
src/asset/: dialogue_asset.rs  mod.rs
src/graph/: dialogue_graph.rs  mod.rs  node.rs
src/graph/nodes/: choice_node.rs  mod.rs  text_node.rs
src/runtime/: dialogue_runner.rs  mod.rs  systems.rs
